# local_llama

./: .env.example  .gitignore  CLAUDE.md  README.md  REFLEX_TREE_COMPONENT_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  setup_database.sql  start_offline_demo.sh  test_markdown_editor.html  test_markdown_minimal.html  test_simple_markdown.py
.uv/: uv.toml
alembic/: env.py
alembic/versions/: 00faf5453aaa_.py  04fec3e519f4_.py  0afbde89b859_.py  0efa150e1d21_.py  112d36c26991_.py  12adaffe3ffe_.py  175d8d094258_.py  1cf8cc30016f_.py  1efb555b288d_.py  202e7f8f0426_.py  215932c8ad66_.py  26ad63a5d92b_.py  2fc7bef620c8_.py  3f5ba5c9da7f_.py  4f0b141e6885_.py  5701ff8938d0_.py  5a74224a5cff_.py  629e58100a98_.py  68f71e0fdbc7_.py  6dd1361485da_.py  702de732ebe0_.py  725402cff88f_.py  7307306ba3b7_.py  76cb6feacac5_.py  78d3cde3ee50_.py  799437cf0442_.py  7a6a8ff23a24_.py  (+20 more)
assets/: AdvancedSmokeSystem.jsx
description/: overview.md
generation_scripts/: README.md  check_software_catalog_count.py  check_software_categories.py  check_storm_gearbox_software.py  debug_software_display.py  init_offline_db.py  list_current_software.py  remove_fake_software.py  requirements-demo.txt  requirements-lock.txt  requirements-minimal.txt  requirements-offline.txt  run_offline.sh  run_offline_uv.sh  rxconfig_offline.py  setup_offline_app.py  test_storm_gearbox_pagination.py  update_software_vendors.py  update_storm_gearbox_vendors.py  verify_new_columns.py
local_llama/: local_llama.py  local_llama.py.backup
uploads/: 1753477270.157941_upload_1753477270.157379
(+260 files in other folders)
